MDEV-6659: mysqld --help --verbose initializes wsrep

Do not initialize/load wsrep subsystem if server is
started in help mode.